--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,28 @@
+annotated-types==0.7.0
+anyio==4.8.0
 beautifulsoup4==4.13.3
 blinker==1.9.0
 Brotli==1.1.0
 cffi==1.17.1
 click==8.1.8
 cssselect2==0.7.0
-Flask==3.1.0
+exceptiongroup==1.2.2
 fonttools==4.56.0
+h11==0.14.0
+idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.5
 Markdown==3.7
 MarkupSafe==3.0.2
 pillow==11.1.0
 pycparser==2.22
+pydantic==2.10.6
+pydantic_core==2.27.2
 pydyf==0.11.0
 pyphen==0.17.2
+sniffio==1.3.1
 soupsieve==2.6
+starlette==0.45.3
 tinycss2==1.4.0
 tinyhtml5==2.0.0
 typing_extensions==4.12.2
